<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <!-- Auto layout, variables, and unit scale are not yet supported -->

    <!-- Auto layout, variables, and unit scale are not yet supported -->

    <View
        android:id="@+id/rectangle_4"
        android:layout_width="398dp"
        android:layout_height="389dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/mypage_layout"
        android:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/line_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/aura_young"
        android:layout_width="101dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:clipToOutline="true"
        android:src="@drawable/big_user_profile"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rectangle_4"
        app:layout_constraintTop_toTopOf="@+id/rectangle_4" />

    <ImageView
        android:id="@+id/signup_button"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/signup_strprofile"
        app:layout_constraintBottom_toTopOf="@+id/aura_young"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_4" />

    <!-- Auto layout, variables, and unit scale are not yet supported -->

    <!-- Auto layout, variables, and unit scale are not yet supported -->

    <ImageView
        android:id="@+id/fi_sr_menu_"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:clipToOutline="true"
        android:src="@drawable/menu"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142" />

    <TextView
        android:id="@+id/hi_user"
        android:layout_width="138dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/kimm_bold"
        android:gravity="top"
        android:text="@string/hi_user"
        android:textAppearance="@style/hi_user"
        app:layout_constraintBottom_toTopOf="@+id/aura_young"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_button" />

    <TextView
        android:id="@+id/some_id2"
        android:layout_width="298dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/some_id2"
        android:textAppearance="@style/some_id2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />

    <TextView
        android:id="@+id/p"
        android:layout_width="131dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/p"
        android:textAppearance="@style/some_id2"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/wed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/some_id2"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Auto layout, variables, and unit scale are not yet supported -->

    <TextView
        android:id="@+id/wed"
        android:layout_width="137dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:gravity="top"
        android:text="@string/wed"
        android:textAppearance="@style/wed"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/some_id2"
        app:layout_constraintVertical_bias="0.812" />

    <ImageView
        android:id="@+id/component_39"
        android:layout_width="93dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/gary_mini_titlebar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_4"
        app:layout_constraintVertical_bias="0.082" />

    <!-- Auto layout, variables, and unit scale are not yet supported -->

    <!-- Auto layout, variables, and unit scale are not yet supported -->

    <!-- Auto layout, variables, and unit scale are not yet supported -->

    <!-- Auto layout, variables, and unit scale are not yet supported -->


    <ImageView
        android:id="@+id/component_40"
        android:layout_width="93dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:src="@drawable/gary_mini_titlebar"
        app:layout_constraintBottom_toBottomOf="@+id/line_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_4"
        app:layout_constraintVertical_bias="0.797" />

    <ImageView
        android:id="@+id/component_41"
        android:layout_width="93dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:src="@drawable/gary_mini_titlebar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_4"
        app:layout_constraintVertical_bias="0.39" />

    <ImageView
        android:id="@+id/line_1"
        android:layout_width="337dp"
        android:layout_height="4dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/line"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/line_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_4"
        app:layout_constraintVertical_bias="0.338" />

    <ImageView
        android:id="@+id/line_2"
        android:layout_width="342dp"
        android:layout_height="3dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/line"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <ImageView
        android:id="@+id/line_3"
        android:layout_width="344dp"
        android:layout_height="3dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/line"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/line_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_1" />

    <TextView
        android:id="@+id/some_id3"
        android:layout_width="69dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/kimm_bold"
        android:gravity="top"
        android:text="@string/some_id3"
        android:textAppearance="@style/some_id3"
        app:layout_constraintBottom_toBottomOf="@+id/component_39"
        app:layout_constraintEnd_toEndOf="@+id/component_39"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="@+id/component_39"
        app:layout_constraintTop_toTopOf="@+id/component_39"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/w"
        android:layout_width="97dp"
        android:layout_height="43dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/kimm_bold"
        android:gravity="top"
        android:lineHeight="26sp"
        android:text="@string/w"
        android:textAppearance="@style/w"
        app:layout_constraintBottom_toTopOf="@+id/line_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_4"
        app:layout_constraintVertical_bias="0.888" />

    <TextView
        android:id="@+id/w2"
        android:layout_width="58dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/kimm_bold"
        android:gravity="top"
        android:lineHeight="26sp"
        android:text="@string/w2"
        android:textAppearance="@style/w"
        app:layout_constraintBottom_toTopOf="@+id/line_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_1"
        app:layout_constraintVertical_bias="0.898" />

    <TextView
        android:id="@+id/w3"
        android:layout_width="97dp"
        android:layout_height="43dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:fontFamily="@font/kimm_bold"
        android:gravity="top"
        android:lineHeight="26sp"
        android:text="@string/w3"
        android:textAppearance="@style/w"
        app:layout_constraintBottom_toBottomOf="@+id/line_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_3"
        app:layout_constraintVertical_bias="0.894" />

    <TextView
        android:id="@+id/some_id4"
        android:layout_width="68dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/kimm_bold"
        android:gravity="top"
        android:text="@string/some_id4"
        android:textAppearance="@style/some_id3"
        app:layout_constraintBottom_toBottomOf="@+id/component_41"
        app:layout_constraintEnd_toEndOf="@+id/component_41"
        app:layout_constraintStart_toStartOf="@+id/component_41"
        app:layout_constraintTop_toTopOf="@+id/component_41" />

    <TextView
        android:id="@+id/some_id5"
        android:layout_width="63dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/kimm_bold"
        android:gravity="top"
        android:text="@string/some_id5"
        android:textAppearance="@style/some_id3"
        app:layout_constraintBottom_toBottomOf="@+id/component_40"
        app:layout_constraintEnd_toEndOf="@+id/component_40"
        app:layout_constraintStart_toStartOf="@+id/component_40"
        app:layout_constraintTop_toTopOf="@+id/component_40" />

</androidx.constraintlayout.widget.ConstraintLayout>